--- a/test2.Rmd
+++ b/test2.Rmd
@@ -2,20 +2,7 @@
 title: "test for uploading into github"
 author: Taeyoon Song
 date: February 21, 2020
-output: 
-  github_document:
-    toc: FALSE,
-    toc_depth: 3,
-    fig_width: 7,
-    fig_height: 5,
-    dev: "png",
-    df_print: "default",
-    includes: NULL,
-    md_extensions: NULL,
-    hard_line_breaks: TRUE,
-    pandoc_args: NULL,
-    html_preview: TRUE,
-    keep_html: TRUE
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
