--- a/test2.Rmd
+++ b/test2.Rmd
@@ -2,7 +2,7 @@
 title: "test for uploading into github"
 author: Taeyoon Song
 date: February 21, 2020
-output: github_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
