--- a/test2.Rmd
+++ b/test2.Rmd
@@ -2,7 +2,7 @@
 title: "test for uploading into github"
 author: Taeyoon Song
 date: February 21, 2020
-output: html_document
+output: md_document
 ---
 
 ```{r setup, include=FALSE}
@@ -30,3 +30,7 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+
+
