--- a/ch_2_6_oce.Rmd
+++ b/ch_2_6_oce.Rmd
@@ -2,7 +2,9 @@
 title: "Ch2.6 OCE of Kelley "
 author: Taeyoon Song
 date: February 24, 2020
-output: github_document
+output: 
+  github_document:
+    pandoc_args: --webtex
 ---
 
 ```{r setup, include=FALSE}
